# DeACED

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/deaced/: __init__.py  __main__.py  cli.py  errors.py  jfloat.py  model.py  mutf8.py  parser.py  reader.py  tags.py
src/deaced/render/: __init__.py  _safe.py  json.py  pretty.py  text.py
tests/: test_cli.py  test_dump.py  test_golden.py  test_jfloat.py  test_mutf8.py  test_protocol.py  test_reader.py  test_render.py  test_robustness.py
tests/data/: arraylist.golden  arraylist.ser  arrays.golden  arrays.ser  classobj.golden  enumv.golden  enumv.ser  floats.golden  floats.ser  inherit.golden  inherit.ser  longstring.golden  longstring.ser  primarrays.golden  primarrays.ser  prims.golden  prims.ser  proxy.golden  proxy.ser  refs.golden  refs.ser
tools/: GenerateFixtures.java  README.md  regen_goldens.sh
